# TxGNN

./: .gitignore  CLAUDE.md  pyproject.toml  txdata_download.py
docs/: coding_standards.md
manage_db/: ingest_opentargets.py  kg_schema.py  register_ontology_sources.py  smoke_test_xref.py
manage_db/lnschema_txgnn/: __init__.py  models.py  pyproject.toml
manage_db/lnschema_txgnn/migrations/: 0001_initial.py  0002_add_xref_columns.py  0003_alter_dataset_branch_alter_dataset_id_and_more.py
notebooks/: kg_schema_overview.ipynb  lamindb_instance_setup.ipynb  manage_db_setup.ipynb  txdata_explore.ipynb
reproduce/: import_bionty_and_pertdb.py  register_ontology_sources.py  sync_nodes_to_lamindb.py
txgnn/: __init__.py  kg_migrate.py  kg_schema.py
